[tool.poetry]
name = "hexlet-code"
version = "0.3.0"
description = ""
authors = ["Arkadiy Lazorskiy <enoreply@mail.ru>"]
repository = "https://github.com/noreplyyyy/python-project-50"
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
